Made all datas persistent

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,13 @@ spring:
    path: /h2
 
  datasource:
-  url: jdbc:h2:mem:testdb
+  url: jdbc:h2:file:~/test
   username: sa
   password: 
+  driver-class-name: org.h2.Driver
+  
+ jpa:
+  database-platform: org.hibernate.dialect.H2Dialect
+  hibernate:
+   ddl-auto: update
+  
